# python-project-lvl1

./: .gitignore  README.md  pyproject.toml  setup.py  заметки
brain_games/: __main__.py  cli.py  game_engine.py  pyproject.toml
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: b_calc.py  b_even.py  b_gcd.py  b_prime.py  b_progression.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_progression.py  brain_storm  brain_storm.py  launch_script.py
brain_games/scripts/games/: brain_calc.py  brain_gcd.py
python-project-lvl1/: .travis.yml  pyproject.toml
python-project-lvl1/brain_games/scripts/: brain-even.py  brain_games.py
