[tool.poetry]
name = "GDNeural_brain_games"
version = "1.0.0"
description = "Few_games_for_your_brains"
authors = ["GDNeural <mighty.python777@gmail.com>"]
packages = [
  { include = "brain_games" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Education",
  "License :: Free for non-commercial use",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Topic :: Education"
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
Pylint = "^2.4.4"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.b_even:main"
brain-calc = "brain_games.scripts.b_calc:main"
brain-gcd = "brain_games.scripts.b_gcd:main"
brain-progression = "brain_games.scripts.b_progression:main"
brain-prime = "brain_games.scripts.b_prime:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
