[tool.poetry]
name = "GDNeural_brain_games"
version = "0.1.0"
description = ""
authors = ["skip"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^4.4"
wemake-python-styleguide = "^0.8.1"

[tool.poetry.scripts]
brain_games = "brain_games.scripts.brain_games:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
